--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,11 @@
 {
     "name": "loveorigami/yii2-notification-wrapper",
     "description": "This module for renders a message from session flash (with ajax, pjax support and etc.)",
-    "version": "3.0",
+    "version": "4.1",
     "type": "yii2-extension",
     "keywords": [
         "yii2", "module", "notification", "flash",
-        "noty", "toastr", "growl", "alert", "notyjs", "notyfy", "pnotyfy"
+        "noty", "toastr", "growl", "alert", "notyjs", "notyfy", "pnotyfy", "notific8"
     ],
     "homepage": "https://github.com/loveorigami/yii2-notification-wrapper",
     "time": "2016-03-31",
